force-app/main/default/objects/Global_Settings__c/Global_Settings__c.object-meta.xml
<CustomObject>
    <label>e2a Global Settings</label>
    <nameField>
        <label>Global Settings</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>e2a Global Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>