force-app/main/default/objects/Global_Settings__c/fields/AGMM_x_Current_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>AGMM_x_Current_Job_Id__c</fullName>
    <description>to store the id of AGMM job enqueued by Manager</description>
    <inlineHelpText>to store the id of AGMM job enqueued by Manager</inlineHelpText>
    <label>AGMM Job Id Enqueued by Manager</label>
    <length>18</length>
    <type>Text</type>
</CustomField>