force-app/main/default/objects/Global_Settings__c/fields/Auto_Fill_Contact_in_New_emails__c.field-meta.xml
<CustomField>
    <fullName>Auto_Fill_Contact_in_New_emails__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>When creating a NEW email from the emails related list, if the parent record has a lookup to a Contact, then auto-populate the &apos;To&apos; field with the Contact. If more than one Contact lookup exists, the first one that has a value will be used</inlineHelpText>
    <label>Auto-Fill Contact in New emails</label>
    <type>Checkbox</type>
</CustomField>