force-app/main/default/objects/Global_Settings__c/fields/Business_Unit_Mandatory__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Mandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, users will have to select a Business Unit to send email. If not checked, users can send email without selecting any Business Unit.</inlineHelpText>
    <label>Business Unit Mandatory</label>
    <type>Checkbox</type>
</CustomField>