force-app/main/default/objects/Global_Settings__c/fields/Copy_Tags_In_Reply_Forward__c.field-meta.xml
<CustomField>
    <fullName>Copy_Tags_In_Reply_Forward__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Copy Tags In Reply Forward</label>
    <type>Checkbox</type>
</CustomField>