force-app/main/default/objects/Global_Settings__c/fields/Default_User_OOO_x_Calendar_Items_Type__c.field-meta.xml
<CustomField>
    <fullName>Default_User_OOO_x_Calendar_Items_Type__c</fullName>
    <description>Which Calendar Entries are OOO / Unavailable?</description>
    <inlineHelpText>Which Calendar Entries are OOO / Unavailable?</inlineHelpText>
    <label>Which Calendar Entries OOO?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All Calendar items</fullName>
            </value>
            <value>
                <fullName>Time OUTSIDE all calendar items</fullName>
            </value>
            <value>
                <fullName>Just specific types of calendar Items</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>