force-app/main/default/objects/Global_Settings__c/fields/Default_User_OOO_x_Source__c.field-meta.xml
<CustomField>
    <fullName>Default_User_OOO_x_Source__c</fullName>
    <description>Default OOO / non-working times setting for Users</description>
    <inlineHelpText>Default OOO / non-working times setting for Users</inlineHelpText>
    <label>Default OOO Times Setting For Users</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Use My Calendar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>