force-app/main/default/objects/Global_Settings__c/fields/EC_Auto_Fill_Contact_x_Lookup_Fields__c.field-meta.xml
<CustomField>
    <fullName>EC_Auto_Fill_Contact_x_Lookup_Fields__c</fullName>
    <inlineHelpText>Contains a list of objectsApiName.FieldApiName pairs which specify which lookup field to use on each Object for the &apos;Auto-Fill Contact in New Emails&apos; functionality on the email client</inlineHelpText>
    <label>EC Auto-Fill Contact - Lookup Fields</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>