force-app/main/default/objects/Global_Settings__c/fields/EC_Auto_Replied_Status__c.field-meta.xml
<CustomField>
    <fullName>EC_Auto_Replied_Status__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Update email status to &apos;Replied&apos; or &apos;Forwarded&apos; when it is replied or forwarded respectively.</inlineHelpText>
    <label>EC Auto Replied Status</label>
    <type>Checkbox</type>
</CustomField>