force-app/main/default/objects/Global_Settings__c/fields/EC_Compliance_BCC_Enabled__c.field-meta.xml
<CustomField>
    <fullName>EC_Compliance_BCC_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The value of this checkbox must be identical to the Compliance BCC Emails Enable checkbox in Email Administration. If not, users may receive errors when attempting to send emails via Ortoo.</inlineHelpText>
    <label>EC Compliance BCC Enabled</label>
    <type>Checkbox</type>
</CustomField>