force-app/main/default/objects/Global_Settings__c/fields/EC_Hide_To_Field__c.field-meta.xml
<CustomField>
    <fullName>EC_Hide_To_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hide To Field in Email Client if checked</description>
    <inlineHelpText>If Checked &quot;To&quot; Field will be combined with &quot;Additional To&quot; Field in Email Client</inlineHelpText>
    <label>EC Hide To Field</label>
    <type>Checkbox</type>
</CustomField>