force-app/main/default/objects/Global_Settings__c/fields/EC_Restrict_From_Addresses__c.field-meta.xml
<CustomField>
    <fullName>EC_Restrict_From_Addresses__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, organization wide from-addresses available for selection in the email editor will be restricted to the current users address. If unchecked, no restriction applies.</inlineHelpText>
    <label>EC Restrict From Addresses</label>
    <type>Checkbox</type>
</CustomField>