force-app/main/default/objects/Global_Settings__c/fields/EC_Store_Sent_Emails__c.field-meta.xml
<CustomField>
    <fullName>EC_Store_Sent_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Store a copy of sent (outgoing) emails in the email storage object.</inlineHelpText>
    <label>EC Store Sent Emails</label>
    <type>Checkbox</type>
</CustomField>