force-app/main/default/objects/Global_Settings__c/fields/EC_Store_Sent_Emails_As_Activity__c.field-meta.xml
<CustomField>
    <fullName>EC_Store_Sent_Emails_As_Activity__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Store sent (outgoing) emails as Activity in activity related list for target object record.</inlineHelpText>
    <label>EC Store Sent Emails As Activity</label>
    <type>Checkbox</type>
</CustomField>