force-app/main/default/objects/Global_Settings__c/fields/EC_Thread_Id_In_Body__c.field-meta.xml
<CustomField>
    <fullName>EC_Thread_Id_In_Body__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If checked, thread ID will be automatically added to the body of the outgoing email, when available.</inlineHelpText>
    <label>EC Thread Id In Body</label>
    <type>Checkbox</type>
</CustomField>