force-app/main/default/objects/Global_Settings__c/fields/Email_Gateway__c.field-meta.xml
<CustomField>
    <fullName>Email_Gateway__c</fullName>
    <inlineHelpText>Email Gateway to use. Default uses Salesforce API. Other options support external email gateways.</inlineHelpText>
    <label>Email Gateway</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
            <value>
                <fullName>Mailgun</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>