force-app/main/default/objects/Global_Settings__c/fields/Email_Gateway_API_Key__c.field-meta.xml
<CustomField>
    <fullName>Email_Gateway_API_Key__c</fullName>
    <inlineHelpText>&quot;API Key&quot; from Mailgun Email Gateway settings</inlineHelpText>
    <label>Email Gateway API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>