force-app/main/default/objects/Global_Settings__c/fields/Email_Gateway_Domain__c.field-meta.xml
<CustomField>
    <fullName>Email_Gateway_Domain__c</fullName>
    <inlineHelpText>&quot;Domain&quot; from Mailgun Email Gateway settings</inlineHelpText>
    <label>Email Gateway Domain</label>
    <type>Url</type>
</CustomField>