force-app/main/default/objects/Global_Settings__c/fields/Enable_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Enable_Business_Unit__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, Business Unit selection will be visible and enabled in the email client. If unchecked it will not be visible in the email client, but any Business Unit automatically set (e.g. a default one) will still operate.</inlineHelpText>
    <label>Enable Business Unit</label>
    <type>Checkbox</type>
</CustomField>