force-app/main/default/objects/Global_Settings__c/fields/Enable_Email_Count__c.field-meta.xml
<CustomField>
    <fullName>Enable_Email_Count__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Email Count</label>
    <type>Checkbox</type>
</CustomField>