force-app/main/default/objects/Global_Settings__c/fields/Enable_Member_Matching_Rule_Caching__c.field-meta.xml
<CustomField>
    <fullName>Enable_Member_Matching_Rule_Caching__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if checked, allows to turn on caching for member matching rules in Assignment Groups</description>
    <label>Matching Rules Caching (Deprecated)</label>
    <type>Checkbox</type>
</CustomField>