force-app/main/default/objects/Global_Settings__c/fields/General_Notifications_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>General_Notifications_Email_Address__c</fullName>
    <label>General Notifications Email Address</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>