force-app/main/default/objects/Global_Settings__c/fields/Global_Scheduler_Master_Switch__c.field-meta.xml
<CustomField>
    <fullName>Global_Scheduler_Master_Switch__c</fullName>
    <defaultValue>(&quot;Off&quot;)</defaultValue>
    <label>Global Scheduler Master Switch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On</fullName>
            </value>
            <value>
                <fullName>Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>