force-app/main/default/objects/Global_Settings__c/fields/Keep_inline_images_in_email_body__c.field-meta.xml
<CustomField>
    <fullName>Keep_inline_images_in_email_body__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, inline images are kept in body of the email (and displayed when HTML is rendered) otherwise inline images are treated as normal attachments.</inlineHelpText>
    <label>Keep inline images in email body</label>
    <type>Checkbox</type>
</CustomField>