force-app/main/default/objects/Global_Settings__c/fields/Manager_Job_Business_Hours_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Manager_Job_Business_Hours_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>In order to automate the manager job based on time.</description>
    <inlineHelpText>Manager Job to run in defined Business Hours only.</inlineHelpText>
    <label>Manager Job Business Hours Schedule</label>
    <referenceTo>BusinessHours</referenceTo>
    <relationshipName>QA_Global_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>