force-app/main/default/objects/Global_Settings__c/fields/Notify_Ortoo_Support_of_errors__c.field-meta.xml
<CustomField>
    <fullName>Notify_Ortoo_Support_of_errors__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If it is checked, notification emails go to Ortoo support too.</inlineHelpText>
    <label>Notify Ortoo Support of errors</label>
    <type>Checkbox</type>
</CustomField>