force-app/main/default/objects/Global_Settings__c/fields/PostV2_Install__c.field-meta.xml
<CustomField>
    <fullName>PostV2_Install__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PostV2_Install</label>
    <type>Checkbox</type>
</CustomField>