force-app/main/default/objects/Global_Settings__c/fields/Re_parent_emails_on_Lead_conversion__c.field-meta.xml
<CustomField>
    <fullName>Re_parent_emails_on_Lead_conversion__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Attach Emails To Opportunity, Account, Contact When Lead is Converted</inlineHelpText>
    <label>Re-parent emails on Lead conversion</label>
    <type>Checkbox</type>
</CustomField>