force-app/main/default/objects/Global_Settings__c/fields/Set_Business_Unit_from_current_record__c.field-meta.xml
<CustomField>
    <fullName>Set_Business_Unit_from_current_record__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>When sending an email from a related
list, default to the Business Unit to that of the current record (e.g. the Lead being send
from) if a lookup to Business Unit exists on the object (e.g. Lead object). This overrides
the User&apos;s Default Business Unit.</inlineHelpText>
    <label>Set Business Unit from current record</label>
    <type>Checkbox</type>
</CustomField>