force-app/main/default/objects/Global_Settings__c/fields/Uncheck_BCC_checkbox_for_all_Users__c.field-meta.xml
<CustomField>
    <fullName>Uncheck_BCC_checkbox_for_all_Users__c</fullName>
    <label>Uncheck BCC checkbox for all Users</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Use value in User settings</fullName>
                <default>true</default>
                <label>Use value in User settings</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>