force-app/main/default/objects/Global_Settings__c/fields/Unmatched_Emails_Default_For_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Unmatched_Emails_Default_For_Assigned_To__c</fullName>
    <inlineHelpText>To set default preference of &apos;Assigned To&apos; field while matching an unmatched email. &apos;From Email Rule&apos; takes the value from default owner field is selected email rule. &apos;Current User&apos; defaults to the user performing matching of an email.</inlineHelpText>
    <label>Unmatched Emails Default For Assigned To</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>From Email Rule</fullName>
                <default>true</default>
                <label>From Email Rule</label>
            </value>
            <value>
                <fullName>Current User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>