force-app/main/default/objects/Global_Settings__c/fields/Unmatched_Emails_Hide_Chose_Owner_Manual__c.field-meta.xml
<CustomField>
    <fullName>Unmatched_Emails_Hide_Chose_Owner_Manual__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When enabled hides the &apos;Choose owner manually&apos; when matching an unmatched email and record is assigned to the preference set in Default for &apos;Assigned To&apos;. When disabled user is able to select/change the owner manually.</inlineHelpText>
    <label>Unmatched Emails Hide Chose Owner Manual</label>
    <type>Checkbox</type>
</CustomField>